2013-08-05  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* graph.c (init_graph_slim_pretty_print): Remove.
	(print_graph_cfg): Do not call it.  Use local pretty printer.
	(start_graph_dump): Likewise.

2013-08-05  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* gimple-pretty-print.c (buffer): Remove.
	(initialized): Likewise.
	(maybe_init_pretty_print): Likewise.
	(print_gimple_stmt): Do not call it.  Use non-static local
	pretty_printer variable.
	(print_gimple_expr): Likewise.
	(print_gimple_seq): Likewise.
	(gimple_dump_bb): Likewise.

2013-08-05  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* asan.c (asan_pp): Remove.
	(asan_pp_initialized): Likewise.
	(asan_pp_initialize): Likewise.
	(asan_pp_string): Take a pretty_printer parameter.  Adjust callers.
	(asan_emit_stack_protection): Tidy.  Use local pretty printer.
	(asan_add_global): Likewise.

2013-08-04  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* pretty-print.h (pp_base): Remove.  Adjust dependent macros.
	* diagnostic.h (diagnostic_flush_buffer): Adjust.
	* pretty-print.c (pp_formatted_text_data): Likewise.
	(pp_indent): Rename from pp_base_indent.
	(pp_format): Rename from pp_base_format.
	(pp_output_formatted_text): Rename from pp_base_output_formatted_text.
	(pp_format_verbatim): Rename from pp_base_format_verbatim.
	(pp_flush): Rename from pp_base_flush.
	(pp_set_line_maximum_length): Rename from
	pp_base_set_line_maximum_length.
	(pp_clear_output_area): Rename from pp_base_clear_output_area.
	(pp_set_prefix): Rename from pp_base_set_prefix.
	(pp_destroy_prefix): Rename from pp_base_destroy_prefix.
	(pp_emit_prefix): Rename from pp_base_emit_prefix.
	(pp_append_text): Rename from pp_base_append_text.
	(pp_formatted_text): Rename from pp_base_formatted_text.
	(pp_last_position_in_text): Rename from pp_base_last_position_in_text.
	(pp_remaining_character_count_for_line): Rename from
	pp_base_remaining_character_count_for_line.
	(pp_newline): Rename from pp_base_newline.